--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "jackPanyj <1016432619@qq.com>",
   "private": true,
   "scripts": {
+    "start": "node build/test.js",
     "dev": "node build/dev-server.js",
     "build": "node build/build.js",
     "lint": "eslint --ext .js,.vue src"
